# Engine

./: .gitignore  .gitmodules  = (Get-Content CUsersconnosourcereposEnginetoolsbootstrap.ps1).Count; Write-Output Total lines $lines  CMakeLists.txt  CMakePresets.json  CODEBASE_CLEANUP_PLAN.md  CPP_SCRIPTING_PLAN.md  EDITOR_ROADMAP.md  EDITOR_SEPARATION_PLAN.md  ENGINE_STATUS.md  GAMEPLAY_UI_PLAN.md  PROJECT_OVERVIEW.md  RENDERER_ABSTRACTION_PLAN.md  RENDERING_ROADMAP.md  UI_SYSTEM_ROADMAP.md  VIEWPORT_UI_SYSTEM_PLAN.md  WIDGET_EDITOR_UX_PLAN.md  _gen.py  _upd.py  _upd_b64.txt  build.bat  build.sh
src/AssetManager/: AssetCooker.cpp  AssetCooker.h  AssetManager.cpp  AssetManager.h  AssetManagerEditorWidgets.cpp  AssetManagerFileOps.cpp  AssetManagerImport.cpp  AssetTypes.h  CMakeLists.txt  GarbageCollector.cpp  GarbageCollector.h  HPKArchive.cpp  HPKArchive.h
src/Basics/: CMakeLists.txt  EngineLevel.cpp  EngineLevel.h  EngineObject.h  MaterialAsset.h  MathTypes.h  Object2D.cpp  Object2D.h  Object3D.cpp  Object3D.h  RenderableObject.cpp  RenderableObject.h  Texture.h
src/Basics/ECS/: ECS.h
src/Core/: AnimationBlending.h  Archive.cpp  Archive.h  Asset.cpp  Asset.h  AudioManager.cpp  AudioManager.h  CMakeLists.txt  Core.h  EditorBridgeImpl.cpp  EditorBridgeImpl.h  EngineLevel.cpp  EngineLevel.h  EngineObject.h  IEditorBridge.h  InputActionManager.cpp  InputActionManager.h  MathTypes.h  NameID.h  Object2D.cpp  ObjectHandle.h  Reflection.cpp  Reflection.h  ShortcutManager.cpp  ShortcutManager.h  SkeletalData.h  TransactionManager.cpp  TransactionManager.h  UndoRedoManager.cpp  UndoRedoManager.h
src/Core/Actor/: Actor.cpp  Actor.h  ActorAssetData.cpp  ActorAssetData.h  ActorComponent.h  ActorRegistry.h  BuiltinActors.h  BuiltinComponents.h  CDO.cpp  CDO.h  World.cpp  World.h
src/Core/ECS/: ComponentReflection.h  ComponentSerialization.h  Components.h  ECS.cpp  ECS.h
src/Diagnostics/: CMakeLists.txt  DiagnosticsManager.cpp  DiagnosticsManager.h  HardwareInfo.cpp  HardwareInfo.h
src/Editor/: CMakeLists.txt  EditorApp.cpp  EditorApp.h  ProjectSelector.cpp  ProjectSelector.h
src/Editor/Tabs/: ActorEditorTab.cpp  AnimationEditorTab.cpp  AudioPreviewTab.cpp  AudioPreviewTab.h  BuildSystemUI.cpp  BuildSystemUI.h  ConsoleTab.cpp  ContentBrowserPanel.cpp  ContentBrowserPanel.h  EditorDialogs.cpp  EditorDialogs.h  EntityEditorTab.cpp  ITabOpener.h  InputActionEditorTab.cpp  InputMappingEditorTab.cpp  LevelCompositionTab.cpp  LevelCompositionTab.h  NotificationsTab.cpp  OutlinerPanel.cpp  OutlinerPanel.h  ParticleEditorTab.cpp  ParticleEditorTab.h  ProfilerTab.cpp  ReflectionWidgetFactory.cpp  RenderDebuggerTab.cpp  RenderDebuggerTab.h  SequencerTab.cpp  ShaderViewerTab.cpp  ShaderViewerTab.h  SkeletalMeshEditorTab.cpp  SkeletalMeshEditorTab.h  UIDesignerTab.cpp  WidgetEditorTab.cpp  WidgetEditorTab.h
src/Editor/UI/: EditorWindowManager.cpp  EditorWindowManager.h
src/Editor/Windows/: MeshViewerWindow.cpp  PopupWindow.cpp  PopupWindow.h  ProjectSettingsWindow.cpp  ProjectSettingsWindow.h  TextureViewerWindow.cpp
src/Landscape/: CMakeLists.txt  LandscapeManager.cpp  LandscapeManager.h
src/Logger/: CMakeLists.txt  Logger.cpp  Logger.h
src/Physics/: CMakeLists.txt  IPhysicsBackend.h  JoltBackend.cpp  JoltBackend.h  PhysXBackend.cpp  PhysXBackend.h  PhysicsTypes.h  PhysicsWorld.cpp  PhysicsWorld.h
src/Renderer/: BuildPipeline.cpp  CMakeLists.txt  Camera.h  CameraPath.h  DDSLoader.cpp  DDSLoader.h  EditorTheme.h  EditorUIBuilder.cpp  EditorUIBuilder.h  IEditorRenderer.h  IRenderContext.h  IRenderObject2D.h  IRenderObject3D.h  IRenderTarget.h  IShaderProgram.h  ITextRenderer.h  ITexture.h  Material.h  PopupWindow.cpp  PopupWindow.h  RenderResourceManager.cpp  RenderResourceManager.h  Renderer.h  RendererCapabilities.h  RendererEnums.h  RendererFactory.h  Shader.h  ShaderProgram.h  SplashWindow.cpp  SplashWindow.h  Texture.h  UIManager.cpp  UIManager.h  UIManagerContentBrowserOverlay.cpp  UIManagerEditor.cpp  UIWidget.cpp  UIWidget.h  ViewportUIManager.cpp  ViewportUIManager.h  ViewportUITheme.h  (+2 more)
src/Renderer/EditorTabs/: ActorEditorTab.cpp  ActorEditorTab.h  AnimationEditorTab.cpp  AnimationEditorTab.h  AudioPreviewTab.cpp  AudioPreviewTab.h  BuildSystemUI.cpp  BuildSystemUI.h  ConsoleTab.cpp  ConsoleTab.h  ContentBrowserPanel.cpp  ContentBrowserPanel.h  EditorDialogs.cpp  EditorDialogs.h  EntityEditorTab.cpp  EntityEditorTab.h  IEditorTab.h  InputActionEditorTab.cpp  InputActionEditorTab.h  InputMappingEditorTab.cpp  InputMappingEditorTab.h  LevelCompositionTab.cpp  NotificationsTab.cpp  NotificationsTab.h  OutlinerPanel.cpp  OutlinerPanel.h  ParticleEditorTab.cpp  ProfilerTab.cpp  ProfilerTab.h  ReflectionWidgetFactory.cpp  ReflectionWidgetFactory.h  RenderDebuggerTab.cpp  SequencerTab.cpp  SequencerTab.h  ShaderViewerTab.cpp  UIDesignerTab.cpp  UIDesignerTab.h  WidgetEditorTab.cpp  WidgetEditorTab.h
src/Renderer/EditorUI/: EditorWidget.h
src/Renderer/EditorWindows/: MaterialEditorWindow.cpp  MaterialEditorWindow.h  MeshViewerWindow.cpp  MeshViewerWindow.h  PopupWindow.cpp  PopupWindow.h  TextureViewerWindow.cpp  TextureViewerWindow.h
src/Renderer/GameplayUI/: GameplayWidget.h
src/Renderer/OpenGLRenderer/: CMakeLists.txt  OpenGLCamera.cpp  OpenGLCamera.h  OpenGLMaterial.cpp  OpenGLMaterial.h  OpenGLObject2D.cpp  OpenGLObject2D.h  OpenGLObject3D.cpp  OpenGLObject3D.h  OpenGLRenderContext.h  OpenGLRenderTarget.cpp  OpenGLRenderTarget.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLRendererDebug.cpp  OpenGLRendererGizmo.cpp  OpenGLRendererTabs.cpp  OpenGLShader.cpp  OpenGLShader.h  OpenGLShaderProgram.cpp  OpenGLShaderProgram.h  OpenGLSplashWindow.cpp  OpenGLSplashWindow.h  OpenGLTextRenderer.cpp  OpenGLTextRenderer.h  (+12 more)
src/Scripting/: AudioModule.cpp  CMakeLists.txt  CameraModule.cpp  EntityModule.cpp  MathModule.cpp  PythonScripting.cpp  PythonScripting.h  ScriptHotReload.cpp  ScriptHotReload.h  ScriptingGlobalState.h  ScriptingInternal.h  UIModule.cpp  engine.pyi
tests/: CMakeLists.txt  RendererAbstractionTests.cpp
tests/NullRenderer/: NullRenderer.h
(+139 files in other folders)
